--- a/templates/success.html
+++ b/templates/success.html
@@ -17,6 +17,11 @@
         
         <div class="alert alert-warning">
             <strong>请立即保存您的密码！</strong> 此密码仅显示一次，离开此页面后将无法找回。
+            <br><br>
+            📱 <a href="https://github.com/guowanghushifu/EmbyToolbox" target="_blank" class="text-decoration-none">各平台Emby客户端列表(github)</a>
+            <br><br>
+            📱 <a href="https://gitee.com/guowanghushifu/EmbyToolbox" target="_blank" class="text-decoration-none">各平台Emby客户端列表(国内gitee)</a>
+            <br><br>
         </div>
         
         <a href="{{ emby_url }}" class="btn btn-primary" target="_blank">前往 Emby 登录</a>
