--- a/templates/success.html
+++ b/templates/success.html
@@ -16,7 +16,7 @@
         </div>
         
         <div class="alert alert-warning">
-            <strong>请立即保存您的密码！</strong> 此密码仅显示一次，离开此页面后将无法找回。
+            <strong>请立即保存您的密码！</strong> 此密码仅显示一次，离开此页面后将无法找回，登录Emby控制台可自助修改密码！
             <br><br>
             📱 <a href="https://github.com/guowanghushifu/EmbyToolbox" target="_blank" class="text-decoration-none">各平台Emby客户端列表(github)</a>
             <br><br>
